--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,6 +25,7 @@ subjects:
 - !lcc 'AG'
 - !lcsh 'Indexes'
 - !lcsh 'Questions and answers -- Periodicals'
+- GITenberg
 title: "Notes and Queries, Index of Volume 1, November, 1849-May, 1850\r\nA Medium\
   \ of Inter-Communication for Literary Men, Artists, Antiquaries, Genealogists, etc."
 url: http://www.gutenberg.org/ebooks/13536
